--- a/themes/vexo/_config.yml
+++ b/themes/vexo/_config.yml
@@ -44,7 +44,7 @@ google_analytics:
 disqus_shortname: 
 
 about:
-  banner: https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1586688834919&di=c71f2e607692b2108d8d2ca48d05e304&imgtype=0&src=http%3A%2F%2Fn.sinaimg.cn%2Fsinacn20117%2F267%2Fw640h427%2F20181211%2F5780-hqackaa3226802.jpg
+  banner: https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1587480809701&di=68eb8a0c6235b7bd338dabb3c3108dc3&imgtype=0&src=http%3A%2F%2Fbpic.588ku.com%2Fback_pic%2F05%2F09%2F61%2F1659866d3f5d229.jpg
   avatar: https://avatars2.githubusercontent.com/u/15856614?s=400&u=3502a2d9db6a2c147091f94fd21dd5afb57af097&v=4
   description: "让我停下脚步的不是我所看见的，而是我所没有看见的"
   github_username: afuryboy
